--- a/webapp/package.json
+++ b/webapp/package.json
@@ -151,6 +151,9 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.12.1",
-    "react-router-dom": "^5.2.0"
+    "@types/react": "^17.0.0",
+    "react-router-dom": "^5.2.0",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3"
   }
 }
